test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 02 Apr 2025 10:43:45 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="4y6k9h3AxBrty1DvOV1RGChmQHSd7EcP", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}